--- a/Connect.html
+++ b/Connect.html
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-    <button onclick="topFunction()" id="btn-back-to-top" title="Go to top">  <i class="fas fa-arrow-up"></i></button>
+    <button onclick="topFunction()" id="btn-back-to-top" title="Go to top"> <i class="fas fa-arrow-up"></i></button>
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-custom">
             <div class="container">
@@ -64,7 +64,8 @@
                     <a class="nav-link " aria-current="page" href="Partner.html">Đối tác đào tạo</a>
                     <a class="nav-link " aria-current="page" href="Jobs.html">Kết nối việc làm</a>
                     <a class="nav-link active" aria-current="page" href="#">Liên hệ</a>
-                    <a class="btn btn-theme py-2 m-2" href="https://hoc.congdanso.edu.vn/learner#/course/course-library" target="_blank">Bắt đầu học</a>
+                    <a class="btn btn-theme py-2 m-2" href="https://hoc.congdanso.edu.vn/learner#/course/course-library"
+                        target="_blank">Bắt đầu học</a>
                 </div>
             </div>
         </nav>
@@ -73,7 +74,8 @@
             <img src="./assets/img/Banner/LienHe.png" class=" pt-5 w-100" alt="">
             <div class="header-banner-text" style="top: 80%;">
                 <h1 class="fw-bold">Liên hệ với chúng tôi</h1>
-                <p class="pt-3">Quý đối tác Tuyển Dụng và Đào Tạo vui lòng điền thông tin liên hệ vào biểu mẫu bên dưới, chúng tôi sẽ
+                <p class="pt-3">Quý đối tác Tuyển Dụng và Đào Tạo vui lòng điền thông tin liên hệ vào biểu mẫu bên dưới,
+                    chúng tôi sẽ
                     phản hồi Quý đối tác trong thời gian sớm nhất</p>
             </div>
         </div>
@@ -85,12 +87,13 @@
                         <input type="text" class="form-control" name="name" id="inputName" placeholder="Họ và tên:">
                     </div>
                     <div class="form-group col-sm-12">
-                        <input type="tel" class="form-control" name="phone" id="inputNumber" placeholder="Số điện thoại:">
+                        <input type="tel" class="form-control" name="phone" id="inputNumber"
+                            placeholder="Số điện thoại:">
                     </div>
                     <div class="form-group col-sm-12">
                         <input type="email" class="form-control" name="email" id="inputEmail" placeholder="Email:">
                     </div>
-    
+
                     <div class="row">
                         <div class="form-group col-md-6 col-sm-12">
                             <input type="text" class="form-control" id="inputTeams" placeholder="Đơn vị công tác:">
@@ -100,7 +103,7 @@
                                 placeholder="Vị trí công tác:">
                         </div>
                     </div>
-    
+
                     <div class="form-group col-sm-12">
                         <textarea class="form-control" id="inputMessage" rows="6" placeholder="Nội dung:"></textarea>
                     </div>
@@ -112,12 +115,12 @@
         </div>
 
 
-         <!----------------------Footer-------------------------->
-         <footer class="footer bg-200 py-6 border-top">
+        <!----------------------Footer-------------------------->
+        <footer class="footer bg-200 py-6 border-top">
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
-                    <div class="col-lg-6 mb-5 mb-lg-0 text-black">
+                    <div class="col-lg-4 mb-5 mb-lg-0 text-black">
                         <p class="text-uppercase fw-bold">Văn phòng dự án</p>
                         <p class="mb-0">
                             Địa chỉ: Tầng 4, Tòa nhà xanh Liên hợp quốc,
@@ -128,47 +131,63 @@
                         </p>
                     </div>
                     <!-- Col 2-->
-                    <div class="col-lg-3 mb-5 text-black">
+                    <div class="col-lg-4 mb-5 text-black">
                         <p class="text-uppercase mb-4 fw-bold">Tài liệu tham khảo</p>
                         <div class="mt-3">
                             <a href="https://docs.microsoft.com/en-us/learn/" class="text-decoration-none text-black"
                                 target="_blank">
-                                Microsoft Learn
+                                Microsoft Learn - các khóa học từ Microsoft
                             </a>
                         </div>
                         <div class="mt-3">
-                            <a href="assets/file/Ky nang so co ban Tai lieu huong dan cho giao vien 2.0.pdf" class="text-decoration-none text-black"
-                                download="Huong_dan_cho_giao_vien.zip" target="_blank">
-                                Kỹ năng số cơ bản - tài liệu cho giáo viên
+                            <a href="assets/file/Ky nang so co ban Tai lieu huong dan cho giao vien 2.0.pdf"
+                                class="text-decoration-none text-black" download="Huong_dan_cho_giao_vien.zip"
+                                target="_blank">
+                                Kỹ năng số cơ bản - tài liệu cho người hướng dẫn
                             </a>
                         </div>
                         <div class="mt-3">
                             <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
                                 class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
                                 target="_blank">
-                                Go Digital ASEAN - tài liệu cho giáo viên
+                                Mạng Internet và ứng dụng cơ bản, An toàn sử dụng
+                                Internet, Bán hàng trực tuyến - tài liệu cho người hướng
+                                dẫn
                             </a>
                         </div>
                         <div class="mt-3">
                             <a href="assets/file/ThucHanhExcelTrongPhanTichDuLieu.zip"
                                 class="text-decoration-none text-black" download="ThucHanhExcelTrongPhanTichDuLieu.zip"
                                 target="_blank">
-                                Thực hành Excel trong phân tích dữ liệu
+                                Thực hành Excel trong phân tích dữ liệu - tài liệu cho
+                                người hướng dẫn
                             </a>
                         </div>
                         <div class="mt-3">
-                            <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
-                                class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
+                            <a href="assets/file/So_Tay_Huong_Dan_Khoa_ky_nang_mem_ky_nang_khoi_nghiep_V7.pdf"
+                                class="text-decoration-none text-black"
+                                download="So_Tay_Huong_Dan_Khoa_ky_nang_mem_ky_nang_khoi_nghiep_V7.pdf" target="_blank">
+                                Kỹ năng mềm & kỹ năng khởi nghiệp - tài liệu cho người
+                                hướng dẫn
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="https://youtu.be/LHbxeFaQUsc" class="text-decoration-none text-black"
                                 target="_blank">
-                                Kỹ năng mềm
+                                Hành trình di cư an toàn
                             </a>
                         </div>
                     </div>
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-3 mb-5 mb-lg-0 text-black ps-sm-2">
-                        <p class="text-uppercase mb-4 fw-bold">Nền tảng được phát triển dưới sự hợp tác giữa</p>
+                    <div class="col-lg-4 mb-5 mb-lg-0 text-black ps-sm-4">
+                        <p class="text-uppercase mb-1 fw-bold">Nền tảng được phát triển dưới sự hợp tác của DVET và IOM
+                        </p>
                         <div class="d-flex">
-                            <img alt="" src="assets/img/gallery/logofooter.png" class="custom-image" />
+                            <img alt="" src="assets/img/footer/line1.png" class="custom-image" />
+                        </div>
+                        <p class="mb-1">Và được đóng góp bởi</p>
+                        <div class="d-flex">
+                            <img alt="" src="assets/img/footer/line2.png" class="custom-image" />
                         </div>
                     </div>
                 </div>
